--- a/machine_learning.ipynb
+++ b/machine_learning.ipynb
@@ -71,8 +71,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transactions_aggregate_categorized = pd.read_sql_query('SELECT * FROM transactions_categorized_aggregate', connection)\n",
-    "\n"
+    "transactions_aggregate_categorized = pd.read_sql_query('SELECT * FROM transactions_categorized_train', connection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions_aggregate_categorized['Description'] = transactions_aggregate_categorized['Description'].replace('[^a-zA-Z ]', '', regex=True)\n",
+    "transactions_aggregate_categorized.loc[transactions_aggregate_categorized['Description'].str.contains('windsor'), 'Description'] = 'windsor'\n",
+    "transactions_aggregate_categorized.loc[transactions_aggregate_categorized['Description'].str.contains('paypal'), 'Description'] = 'paypal'\n",
+    "transactions_aggregate_categorized['Train'] = transactions_aggregate_categorized['Description'] + ' ' + transactions_aggregate_categorized['Amount'].astype(str)"
    ]
   },
   {
@@ -95,10 +106,9 @@
     "\n",
     "\n",
     "class Transactions:\n",
-    "    def __init__(self, description, category, amount):\n",
+    "    def __init__(self, description, category):\n",
     "        self.description = description\n",
     "        self.category = category\n",
-    "        self.amount = amount\n",
     "        \n",
     "    def get_category(self):\n",
     "        for i in categories:\n",
@@ -140,12 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "transactions_categorized = transactions_aggregate_categorized.reset_index()[['Description', 'Category']].values.tolist()\n",
-    "\n",
-    "rent = transactions_aggregate_categorized[transactions_aggregate_categorized['Category'] == 'Rent']\n",
-    "\n",
-    "\n"
+    "transactions_categorized = transactions_aggregate_categorized.reset_index()[['Description', 'Category']].values.tolist()"
    ]
   },
   {
@@ -154,13 +159,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transactions = transactions_aggregate_categorized[['Description', 'Category', 'Amount']]\n",
-    "transactions\n",
-    "\n",
-    "transaction = [(Transactions(row.Description,row.Category,row.Amount)) for index, row in transactions.iterrows() ] \n",
-    "\n",
-    "\n",
-    "transaction[5].amount\n"
+    "transactions = transactions_aggregate_categorized[['Train', 'Category']]\n",
+    "transaction = [(Transactions(row.Train,row.Category)) for index, row in transactions.iterrows() ] \n",
+    "transaction[0].description"
    ]
   },
   {
@@ -205,15 +206,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(training[0].description)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "train_x = [x.description for x in training]\n",
     "train_y = [x.category for x in training]\n",
     "\n",
@@ -231,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,14 +232,7 @@
     "vectorizer = CountVectorizer()\n",
     "train_x_vectors = vectorizer.fit_transform(train_x)\n",
     "\n",
-    "test_x_vectors = vectorizer.transform(test_x)\n",
-    "\n",
-    "# print(train_x[0])\n",
-    "# print(train_x_vectors[0].toarray())\n",
-    "\n",
-    "# train_x_vectors\n",
-    "# train_y\n",
-    "# train_z"
+    "test_x_vectors = vectorizer.transform(test_x)"
    ]
   },
   {
@@ -266,9 +251,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Transfer'], dtype='<U18')"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn import svm\n",
     "\n",
@@ -319,10 +315,10 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "\n",
     "clf_gnb = GaussianNB()\n",
-    "# train_x_vectors_gnb = train_x_vectors.todense() \n",
+    "train_x_vectors_gnb = train_x_vectors.todense() \n",
     "clf_gnb.fit(train_x_vectors_gnb, train_y)\n",
     "\n",
-    "# test_x_vectors_gnb = test_x_vectors.todense()\n",
+    "test_x_vectors_gnb = test_x_vectors.todense()\n",
     "clf_gnb.predict(test_x_vectors_gnb[0])"
    ]
   },
@@ -356,9 +352,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9317269076305221"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "clf_svm.score(test_x_vectors, test_y)"
    ]
@@ -391,26 +398,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## F1 Score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import f1_score\n",
-    "\n",
-    "f1_score(test_y, clf_svm.predict(test_x_vectors), average=None, labels=[Category.Rent, Category.Income, Category.Food, Category.Shopping, Category.Gas, Category.Travel, Category.Cash, \n",
-    "                                                                        Category.Pet, Category.Gifts, Category.Gym, Category.Transfer, Category.Groceries, Category.Bills, Category.Uncategorized, Category.Entertainment, \n",
-    "                                                                       Category.Credit_Card_Reward])"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -425,10 +412,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_set = ['windsor-31443loc des:web pmts id:qxdsc5 indn:m']\n",
+    "test_set = ['transfer paypal']\n",
     "new_test = vectorizer.transform(test_set)\n",
     "\n",
-    "clf_svm.predict(new_test)"
+    "clf_log.predict(new_test)"
    ]
   },
   {
@@ -440,9 +427,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/sklearn/model_selection/_split.py:667: UserWarning: The least populated class in y has only 2 members, which is less than n_splits=5.\n",
+      "  % (min_groups, self.n_splits)), UserWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score=nan,\n",
+       "             estimator=SVC(C=1.0, break_ties=False, cache_size=200,\n",
+       "                           class_weight=None, coef0=0.0,\n",
+       "                           decision_function_shape='ovr', degree=3,\n",
+       "                           gamma='scale', kernel='rbf', max_iter=-1,\n",
+       "                           probability=False, random_state=None, shrinking=True,\n",
+       "                           tol=0.001, verbose=False),\n",
+       "             iid='deprecated', n_jobs=None,\n",
+       "             param_grid={'C': (1, 4, 8, 16, 32), 'kernel': ('linear', 'rbf')},\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring=None, verbose=0)"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
@@ -455,11 +471,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9357429718875502"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "clf.score(test_x_vectors, test_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## F1 Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.90909091, 1.        , 0.88607595, 0.95652174, 0.89473684,\n",
+       "       0.97142857, 0.95890411, 0.85714286, 1.        , 1.        ,\n",
+       "       1.        , 0.95327103, 0.92857143, 0.4       , 0.91666667,\n",
+       "       1.        ])"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "f1_score(test_y, clf.predict(test_x_vectors), average=None, labels=[Category.Rent, Category.Income, Category.Food, Category.Shopping, Category.Gas, Category.Travel, Category.Cash, \n",
+    "                                                                        Category.Pet, Category.Gifts, Category.Gym, Category.Transfer, Category.Groceries, Category.Bills, Category.Uncategorized, Category.Entertainment, \n",
+    "                                                                       Category.Credit_Card_Reward])"
    ]
   },
   {
@@ -478,7 +539,9 @@
     "import pickle\n",
     "\n",
     "with open('categorizer.pkl', 'wb') as f:\n",
-    "    pickle.dump(clf, f)"
+    "    pickle.dump(clf, f)\n",
+    "with open('vectorizer.pkl', 'wb') as f:    \n",
+    "    pickle.dump(vectorizer, f)"
    ]
   },
   {
